--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,11 @@ controllers:
     resource: ../src/Controller/
     type: annotation
 
+app_home:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController::templateAction
+    defaults:
+        template: 'home.html.twig'
 kernel:
     resource: ../src/Kernel.php
     type: annotation
