--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "symfony/ux-turbo": "^2.13",
         "symfony/validator": "6.0.*",
         "symfony/web-link": "6.0.*",
+        "symfony/webpack-encore-bundle": "^1.17",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
