--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,7 +15,7 @@ security:
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
             custom_authenticator: App\Security\UsersAuthenticator
             logout:
                 path: app_logout
@@ -39,7 +39,7 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
+        # - { path: ^/connexion, roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/connexion, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
 when@test:
