--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,10 @@
 parameters:
 
 services:
+    App\Controller\ApiController:
+        tags: [ 'controller.service_arguments' ]
+    App\Repository\InscriptionRepository:
+        public: true #
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
