--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "test": "tests"
   },
   "devDependencies": {
+    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/turbo": "^7.0.1",
+    "@symfony/stimulus-bridge": "^3.2.0",
+    "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
     "@symfony/webpack-encore": "^4.5.0",
     "webpack-notifier": "^1.15.0"
   },
