--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,3 +1,3 @@
 framework:
     mailer:
-        dsn: '%env(MAILER_DSN)%'
+        dsn: 'smtp://5c84f74632106e:fe2a7459f9a81e@sandbox.smtp.mailtrap.io:2525'
